cmake_minimum_required(VERSION 3.10)
project(CMakeProjectChain LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(Project001)
add_subdirectory(Project002)
add_subdirectory(Project003)
add_subdirectory(Project004)
add_subdirectory(Project005)
add_subdirectory(Project006)
add_subdirectory(Project007)
add_subdirectory(Project008)
add_subdirectory(Project009)
add_subdirectory(Project010)
add_subdirectory(Project011)
add_subdirectory(Project012)
add_subdirectory(Project013)
add_subdirectory(Project014)
add_subdirectory(Project015)
add_subdirectory(Project016)
add_subdirectory(Project017)
add_subdirectory(Project018)
add_subdirectory(Project019)
add_subdirectory(Project020)
add_subdirectory(Project021)
add_subdirectory(Project022)
add_subdirectory(Project023)
add_subdirectory(Project024)
add_subdirectory(Project025)
add_subdirectory(Project026)
add_subdirectory(Project027)
add_subdirectory(Project028)
add_subdirectory(Project029)
add_subdirectory(Project030)
add_subdirectory(Project031)
add_subdirectory(Project032)
add_subdirectory(Project033)
add_subdirectory(Project034)
add_subdirectory(Project035)
add_subdirectory(Project036)
add_subdirectory(Project037)
add_subdirectory(Project038)
add_subdirectory(Project039)
add_subdirectory(Project040)
add_subdirectory(Project041)
add_subdirectory(Project042)
add_subdirectory(Project043)
add_subdirectory(Project044)
add_subdirectory(Project045)
add_subdirectory(Project046)
add_subdirectory(Project047)
add_subdirectory(Project048)
add_subdirectory(Project049)
add_subdirectory(Project050)
add_subdirectory(Project051)
add_subdirectory(Project052)
add_subdirectory(Project053)
add_subdirectory(Project054)
add_subdirectory(Project055)
add_subdirectory(Project056)
add_subdirectory(Project057)
add_subdirectory(Project058)
add_subdirectory(Project059)
add_subdirectory(Project060)
add_subdirectory(Project061)
add_subdirectory(Project062)
add_subdirectory(Project063)
add_subdirectory(Project064)
add_subdirectory(Project065)
add_subdirectory(Project066)
add_subdirectory(Project067)
add_subdirectory(Project068)
add_subdirectory(Project069)
add_subdirectory(Project070)
add_subdirectory(Project071)
add_subdirectory(Project072)
add_subdirectory(Project073)
add_subdirectory(Project074)
add_subdirectory(Project075)
add_subdirectory(Project076)
add_subdirectory(Project077)
add_subdirectory(Project078)
add_subdirectory(Project079)
add_subdirectory(Project080)
add_subdirectory(Project081)
add_subdirectory(Project082)
add_subdirectory(Project083)
add_subdirectory(Project084)
add_subdirectory(Project085)
add_subdirectory(Project086)
add_subdirectory(Project087)
add_subdirectory(Project088)
add_subdirectory(Project089)
add_subdirectory(Project090)
add_subdirectory(Project091)
add_subdirectory(Project092)
add_subdirectory(Project093)
add_subdirectory(Project094)
add_subdirectory(Project095)
add_subdirectory(Project096)
add_subdirectory(Project097)
add_subdirectory(Project098)
add_subdirectory(Project099)
add_subdirectory(Project100)
add_subdirectory(Project101)
add_subdirectory(Project102)
add_subdirectory(Project103)
add_subdirectory(Project104)
add_subdirectory(Project105)
add_subdirectory(Project106)
add_subdirectory(Project107)
add_subdirectory(Project108)
add_subdirectory(Project109)
add_subdirectory(Project110)
add_subdirectory(Project111)
add_subdirectory(Project112)
add_subdirectory(Project113)
add_subdirectory(Project114)
add_subdirectory(Project115)
add_subdirectory(Project116)
add_subdirectory(Project117)
add_subdirectory(Project118)
add_subdirectory(Project119)
add_subdirectory(Project120)
add_subdirectory(Project121)
add_subdirectory(Project122)
add_subdirectory(Project123)
add_subdirectory(Project124)
add_subdirectory(Project125)
add_subdirectory(Project126)
add_subdirectory(Project127)
add_subdirectory(Project128)

